<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    >
    
    <TableRow android:layout_weight="0.5" >
 
         <Button
             android:id="@+id/butTuner"
             android:layout_gravity="center"
             android:layout_margin="@dimen/activity_horizontal_margin"
             android:layout_weight="0.3"
             android:text="@string/tuner" 
             android:onClick="tunerClick" />

         <Button
             android:id="@+id/butEditor"
             android:layout_gravity="center"
             android:layout_margin="@dimen/activity_horizontal_margin"
             android:layout_weight="0.3"
             android:text="@string/editor" 
             android:onClick="editorClick" />

    </TableRow>

    <TableRow android:layout_weight="0.5" >

        <Button
            android:id="@+id/butExit"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_weight="0.3"
            android:text="@string/exit" 
            android:onClick="exitClick" />

        <Button
            android:id="@+id/butTutor"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_weight="0.3"
            android:text="@string/tutor" 
            android:onClick="tutorClick" />

    </TableRow>

</TableLayout>