<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/negative_margin_20"
    android:layout_marginRight="@dimen/negative_margin_20"
    android:layout_marginTop="@dimen/negative_margin_20"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditorActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:weightSum="1"
        android:layout_weight="0.1" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/imageButtonOpen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.15"
            android:layout_marginRight="@dimen/negative_margin_10"
            android:src="@drawable/open" 
            android:onClick="fileClick"
            android:contentDescription="@string/imageButtonOpenContentDescription" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/negative_margin_10"
            android:text="@string/choose_instrument" 
            android:onClick="instrClick"
            android:layout_weight="0.15"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/negative_margin_10"
            android:text="@string/tutor" 
            android:onClick="tutorClick"
            android:layout_weight="0.15"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/negative_margin_10"
            android:text="@string/to_editor" 
            android:onClick="editorClick"
            android:layout_weight="0.15"/>

        <Button
            android:id="@+id/butMainMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/negative_margin_10"
            android:onClick="mainMenuClick"
            android:text="@string/main_menu" 
            android:layout_weight="0.25"/>

        <ImageButton
            android:id="@+id/imageButtonPlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/imageButtonPlayContentDescription"
            android:src="@drawable/play" 
            android:onClick="playClick"
            android:layout_weight="0.15"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_weight="0.1" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:gravity="right"
            android:text="@string/bpm" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_weight="0.5"
            android:gravity="left"
            android:text="@string/file_name" />

    </TableRow>

     <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:weightSum="1" >

        <ori.fluteapp.ObservableScrollView
            android:id="@+id/scrollview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="4" 
            android:layout_weight="1" >

            <ori.fluteapp.FileDrawPanel
                android:id="@+id/fileDrawPanel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                
                />

        </ori.fluteapp.ObservableScrollView>

    </TableRow>
    
     <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:weightSum="1" >

        <ori.fluteapp.ObservableScrollView
            android:id="@+id/scrollview2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="4" 
            android:layout_weight="1" >

            <ori.fluteapp.FingeringDrawPanel
                android:id="@+id/fingeringDrawPanel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                
                />

        </ori.fluteapp.ObservableScrollView>

    </TableRow>
    
      <TableRow
        android:id="@+id/tableRow6"
        android:layout_weight="0.1" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/instrText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:gravity="right"
            android:layout_span="6"  />

    </TableRow>
     

</TableLayout>